test/spec_vectors/if/fail/module_80.wat
(module (func $type-condition-empty-in-loop (i32.const 0) (loop (if (then)))))